# todo-list-testing

./: .envrc  .envrc.example  .gitignore  .gitpod.yml  .tool-version  MAKEFILE  Makefile  README.md  create_tables.py  justfile  main.py  pyproject.toml  remove_tables.py  requirements.txt  reset_tables.py  sql_db.db
.devcontainer/: devcontainer.json
database/: database.py
static/: main.js
static/css/: main.css
templates/: base.html  edit.html  index.html
todo-list/: main.py
todo-list/database/: database.py
todo-list/static/: main.js
todo-list/static/css/: main.css
todo-list/templates/: index.html
