[tool.poetry]
name = "todo-list"
version = "0.1.0"
description = ""
authors = ["Dave Westerveld"]
readme = "README.md"
packages = [{include = "todo_list"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
sqlalchemy = "^2.0.9"
uvicorn = "^0.21.1"
psycopg2-binary= "^2.9.6"
jinja2 = "^3.1.2"
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"