[tool.poetry]
name = "todo-list"
version = "0.1.0"
description = ""
authors = ["Dave Westerveld"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.9"
uvicorn = "^0.21.1"
psycopg2-binary= "^2.9.6"
jinja2 = "^3.1.2"
python-multipart = "^0.0.7"
pydantic = "^2.8.2"
black = "^23.3.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"